[metadata]
name = pyqt4topyqt5
license = LGPL
description = pyqt4 -> pyqt5
url = https://github.com/rferrazz/pyqt4topyqt5

[options]
packages = pyqt4topyqt5
zip_safe = True
setup_requires =
    wheel

[options.entry_points]
console_scripts =
    pyqt4topyqt5 = pyqt4topyqt5:cli

[bdist_wheel]
universal=1

[flake8]
ignore = E741,W503
max-line-length = 90
exclude = .git/*,.eggs/*,
          build/*,site/*,venv*,
          .ropeproject/*
